upgrade genui java props schema contract
